Bugfix: added z-index: 1 to the filter input in the textviewer dropdowns otherwise the pane text would appear over it and the drop down wouldn't stay open.

--- a/assets/scss/text-viewer.scss
+++ b/assets/scss/text-viewer.scss
@@ -179,6 +179,7 @@
 
         .list-filter {
             display: block;
+            z-index: 1;
 
             input {
                 display: inline;
